--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
   height: 100%;
   margin: 0;
   overflow-x:hidden;
-  background-image: url('fundo-oficial.png');
+  background-image: url('bg.jpg');
+  /*background-image: url('fundo-oficial.png');/*
   /*background-image: url('imgs/Prancheta 26 cópia 6@2x-8.png');*/
   background-repeat: repeat;
-  background-size: cover;
+  /*background-size: cover;*/
 }
 
 .titulo{
