--- a/style.css
+++ b/style.css
@@ -160,12 +160,9 @@ body {
 
 .icon{
   font-size: 45px !important;
-  color: #9F803D;
+  color: #000;
 }
 
-.icon:hover {
-	color: #ebc16d;
-}
 
 .m-r-45{
   margin-right: 45px;
